fix: changed wrong font-size for brand title

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -11,6 +11,7 @@ body {
 .brand-title {
   text-align: center;
   font-weight: 900;
+  font-size: 1.2rem;
   margin: 0 15px 10px 15px;
 }
 
